--- a/spring-cloud-demo/pom.xml
+++ b/spring-cloud-demo/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>module-a</module>
+        <module>module-eureka</module>
+      <module>module-api</module>
     </modules>
 
     <name>spring-cloud-demo</name>
@@ -25,16 +27,15 @@
 
   <parent>
     <groupId>com.leon.demo</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>demo-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>../parent/pom.xml</relativePath>
+    <relativePath>../demo-parent/pom.xml</relativePath>
   </parent>
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
       <scope>test</scope>
     </dependency>
     <!--web-->
@@ -68,7 +69,6 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.3</version>
     </dependency>
 
   </dependencies>
