--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>spring-security-demo</module>
         <module>algorithm-demo</module>
         <module>mybatis-demo</module>
+        <module>docker-demo</module>
     </modules>
 
     <name>demo</name>
